# School-Projects

./: README.md
42sh/: Makefile  main.c
42sh/include/: .directory  minishell.h
42sh/src/: init_env.c  minishell.c  prompt.c  tool.c
42sh/tests/: unit_tests.c
Area/: .env  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
Area/api/: .env  .gitignore  Dockerfile  package.json
Area/database/: db.sql
Area/documentation/: README.md  doc_front-diagram.drawio  doc_mobile-diagram_area.drawio
Area/front/: .env  .gitignore  Dockerfile  package.json  webpack.config.js
Area/mobile/: Dockerfile  README.md  pubspec.yaml
BSQ/: Makefile  add_int.c  bsq.c  create_buffer.c  create_square.c  create_tab.c  lib_functions.c
Babel/: CMakeLists.txt  Doxyfile  build.sh  conanfile.txt  documentation.sh  mainwindow.ui  run.sh
Babel/client/include/: Iclient.hpp  UdpSocket.hpp  client.hpp  clientConnect.hpp  errorClient.hpp  mainwindow.h
Babel/client/include/Audio/: Audio.hpp  Encoding.hpp  Iaudio.hpp  PAudio.hpp
Babel/client/src/: UdpSocket.cpp  client.cpp  clientConnect.cpp  errorClient.cpp  main.cpp  mainwindow.cpp
Babel/client/src/Audio/: Audio.cpp  RecordSound.cpp  base.cpp  coding.cpp
Babel/server/include/: ClientID.hpp  ConnectionToClientManager.hpp  Server.hpp  errorServer.hpp
Babel/server/src/: ClientID.cpp  ConnectionToClientManager.cpp  Server.cpp  errorServer.cpp  main.cpp
Babel/utilities/include/: Message.hpp
Babel/utilities/include/PacketReceiver/: IPacketReceiver.hpp  PacketReceiver.hpp  PacketReceiverBoost.hpp  PacketReceiverQt.hpp
Babel/utilities/include/PacketSender/: IPacketSender.hpp  PacketSender.hpp  PacketSenderBoost.hpp  PacketSenderQt.hpp
Babel/utilities/src/: Message.cpp
Babel/utilities/src/PacketReceiver/: PacketReceiver.cpp  PacketReceiverBoost.cpp  PacketReceiverQt.cpp
Babel/utilities/src/PacketSender/: PacketSender.cpp  PacketSenderBoost.cpp  PacketSenderQt.cpp
CardGames/: docker-compose.yml
CardGames/Dashboard/: Dockerfile  angular.json  package-lock.json  package.json
CardGames/server/: Dockerfile  finance.js  package-lock.json  package.json  server.js  spotify.js  weather.js
Corewar/: Makefile
Dante/: Makefile
Dante/bonus/: Makefile  algo.c  error.c  main.c  my.h
Dante/generator/: Makefile  imperfect_maze.c  main.c  my.h  perfect_maze.c  tool.c
Dante/solver/: Makefile  add_node.c  algo.c  error.c  main.c  my.h  tool.c
Epicture/: .gitignore
Epicture/Epicture/: App.js  app.json  package.json
GetNextLine/: get_next_line.c  get_next_line.h
Lemin/: Makefile  ha
Lemin/include/: my.h
Lemin/src/: clear_comments.c  count_start_end.c  create_graph.c  create_list.c  find_ant_nbr.c  how_many_next.c  lemin.c  lib_function.c  my_printf.c  my_strcmp.c  parse.c  parse_rooms.c  parse_tunnels.c  pathfinding.c  pathfinding_tools.c  print_way.c  rooms_error.c  rooms_error_bis.c  tool.c
Lemin/tests/: criterion.c
Matchstick/: Makefile  create_map.c  error.c  find_line.c  find_matches.c  get_data.c  how_many_sticks.c  ia.c  lib_functions.c  matchstick.c  my.h
MyDefender/: Makefile
MyDefender/include/: my.h
MyDefender/src/: base_menu.c  defender.c  destroy.c  display_bad.c  end_loop.c  game_loop.c  get_pos.c  is_path.c  level_menu.c  menu_loop.c  move_bad.c  my_realloc.c  pause_button.c  pause_game.c  set_game_loop.c  set_price.c  set_tower.c  shoot.c  tool.c
MyHunter/: Makefile  checkf.c  convert.c  create_texture.c  game_in.c  game_manage.c  my_hunter.c  struct.h
MyMarvin/: my_marvin.yml
MyRPG/: .block.txt  .file_list.txt  .legend  .monster.txt  .pnj.txt  .quest.txt  Makefile
MyRPG/include/: gnl.h  include.h  macros_menu.h  my_lib.h  my_menu.h  prototypes.h  prototypes_menu.h  rpg.h  struct.h  struct_menu.h
MyRPG/lib/: Makefile
MyRPG/src/: main.c
MyRunner/: Makefile  block.c  check_event.c  check_lose.c  checkf.c  create_bad.c  create_parallax.c  create_texture.c  game_menu.c  map  my.h  my_runner.c  origin.c  read_map.c  set_score.c  sword.c
MyRunner/music/: cut.flac  jump_sound.flac  music_menu.flac
MySokoban/: Makefile  check_o.c  checkf.c  create_tab.c  init_game.c  map  move_player.c  my.h  my_sokoban.c  read_file.c
Navy/: Makefile  pos2
Navy/include/: navy.h
Navy/src/: boats.c  connect.c  error_handling.c  funct_lib.c  game.c  navy.c  (+6 more)
Pushswap/: Makefile  lib_functions.c  my.h  pushswap.c  pushswap_functions.c  swap_loop.c
RType/: CMakeLists.txt  Documentation R-Type.odt  build.sh  conanfile.txt
RType/client/Components/: Automatic.hpp  ComponentsList.hpp  Controlable.hpp  Damage.hpp  HitBox.hpp  Life.hpp  Name.hpp  Online.hpp  Position.hpp  Sound.hpp  Speed.hpp  Team.hpp  Texture.hpp  Weapon.hpp
RType/client/ECS/: ComponentManager.hpp  ComponentStorage.hpp  Entity.hpp  EntityManager.hpp  IComponentStorage.hpp  Manager.hpp  MoveSystem.hpp  System.hpp  SystemManager.hpp
RType/client/Menu/include/: Button.hpp  Line.hpp  Menu.hpp  Sprite.hpp  Text.hpp
RType/client/Menu/src/: Button.cpp  Line.cpp  Menu.cpp  Sprite.cpp  Text.cpp
RType/client/Systems/: SystemList.hpp
RType/client/Systems/include/: AdvanceSystem.hpp  ClearSystem.hpp  ColisionSystem.hpp  EventSystem.hpp  ReceiveSystem.hpp  RenderSystem.hpp  SendSystem.hpp  ShootSystem.hpp  SpawnSystem.hpp
RType/client/Systems/src/: AdvanceSystem.cpp  ClearSystem.cpp  ColisionSystem.cpp  EventSystem.cpp  ReceiveSystem.cpp  RenderSystem.cpp  SendSystem.cpp  ShootSystem.cpp  SpawnSystem.cpp
RType/client/include/: ConnectionToServerManager.hpp  End.hpp  Gameplay.hpp  IMenu.hpp  Pause.hpp  Room.hpp  Timer.hpp
RType/client/src/: ConnectionToServerManager.cpp  End.cpp  Gameplay.cpp  InitGameplay.cpp  Pause.cpp  Room.cpp  Timer.cpp  main.cpp
RType/server/include/: ConnectionToClientManager.hpp  Server.hpp
RType/server/src/: ConnectionToClientManager.cpp  Server.cpp  main.cpp
RType/utilities/include/Network/: MessageComp.hpp  PacketReceiverBoost.hpp  PacketSenderBoost.hpp
RType/utilities/src/: errorServer.cpp
RType/utilities/src/Network/: MessageComp.cpp  PacketReceiverBoost.cpp  PacketSenderBoost.cpp
Tetris/: Makefile
(+399 files in other folders)
